--- a/angular.json
+++ b/angular.json
@@ -31,9 +31,11 @@
             ],
             "styles": [
               "src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/leaflet/dist/leaflet.css"
             ],
             "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/leaflet/dist/leaflet.js"
             ]
           },
