--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.2.0",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
@@ -21,6 +22,7 @@
     "@fortawesome/angular-fontawesome": "^0.15.0",
     "bootstrap": "^5.3.3",
     "leaflet": "^1.9.4",
+    "ngx-sonner": "^2.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
