--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^18.2.0",
     "@fortawesome/angular-fontawesome": "^0.15.0",
     "bootstrap": "^5.3.3",
+    "jspdf": "^2.5.2",
     "leaflet": "^1.9.4",
     "ngx-sonner": "^2.0.2",
     "rxjs": "~7.8.0",
